# azure-cognitive-speech-services-rs

./: .editorconfig  Cargo.toml  README.md
examples/: speak.rs
src/: error.rs  lib.rs  message.rs
src/synthesiser/: mod.rs  stream.rs
