[package]
name = "azure-cognitive-speech-services"
version = "0.0.1"
rust-version = "1.70"
edition = "2021"
authors = ["pyke.io <contact@pyke.io>"]
description = "Azure Cognitive Speech Services for Rust"
license = "Apache-2.0"
repository = "https://github.com/vitri-ent/azure-cognitive-speech-services-rs"

[dependencies]
anyhow = "1.0"
serde = "1.0"
simd-json = "0.12"
tokio = { version = "1.32", features = [ "net" ] }
tokio-tungstenite = { version = "0.20", features = [ "native-tls" ] }
ssml = "=0.0.4"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
http = "0.2"
url = "2.4"
uuid = { version = "1.4", features = [ "v4", "fast-rng" ] }
speech-synthesis = "=0.0.2"
futures-util = { version = "0.3", default-features = false, features = [ "sink", "std" ] }

[dev-dependencies]
tokio = { version = "1.32", features = [ "net", "macros", "rt" ] }
