[package]
name = "azure-cognitive-speech-services"
version = "0.0.9"
rust-version = "1.75"
edition = "2021"
authors = ["pyke.io <contact@pyke.io>"]
description = "Azure Cognitive Speech Services for Rust"
license = "Apache-2.0"
repository = "https://github.com/vitri-ent/azure-cognitive-speech-services-rs"

[dependencies]
serde = "1.0"
simd-json = "0.14"
tokio = { version = "1.40", features = [ "net" ] }
tokio-websockets = { version = "0.10", features = [ "client" ] }
ssml = "0.2"
async-stream-lite = "0.2"
thiserror = "2.0"
tracing = "0.1"
http = "1.0"
bytes = "1.7"
uuid = { version = "1.4", features = [ "v4", "fast-rng" ] }
speech-synthesis = "0.3"
futures-util = { version = "0.3", default-features = false, features = [ "sink", "std" ] }

[features]
default = ["tws-rustls-native-roots", "tws-fastrand", "tws-smol-sha1"]
tws-rustls-native-roots = ["tokio-websockets/rustls-webpki-roots", "tokio-websockets/ring"]
tws-rustls-webpki-roots = ["tokio-websockets/rustls-native-roots", "tokio-websockets/ring"]
tws-native = ["tokio-websockets/native-tls"]
tws-smol-sha1 = ["tokio-websockets/sha1_smol"]
tws-fastrand = ["tokio-websockets/fastrand"]

[dev-dependencies]
tokio = { version = "1.32", features = [ "net", "macros", "rt-multi-thread" ] }
rodio = "0.19"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = [ "fmt" ] }
